--- a/pages/people.html
+++ b/pages/people.html
@@ -16,12 +16,11 @@
     <style>
       .people-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 20px;
-        max-width: 1100px;
+        max-width: 1040px;
         margin: 0 auto;
         padding: 20px;
-        font-family: Arial, sans-serif;
       }
 
       .person {
@@ -79,19 +78,19 @@
 
       @media (max-width: 1040px) {
         .people-grid {
-          grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+          grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+          padding: 15px;
         }
       }
 
-      @media (max-width: 940px) {
-        .people-grid {
-          grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-        }
-      }
-
-      @media (max-width: 640px) {
+      @media (max-width: 600px) {
         .people-grid {
           grid-template-columns: 1fr;
+          padding: 10px;
+        }
+
+        .person {
+          max-width: 100%;
         }
       }
     </style>
