--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <li><a href="index.html">Homepage</a></li>
               <li><a href="index.html#news">News</a></li>
               <li><a href="pages/people.html">People</a></li>
-              <!-- <li><a href="pages/research.html">Research</a></li> -->
+              <li><a href="pages/research.html">Research</a></li>
               <li><a href="pages/publications.html">Publications</a></li>
               <li><a href="pages/join_us.html">Join Us</a></li>
             </ul>
