--- a/pages/people.html
+++ b/pages/people.html
@@ -375,7 +375,7 @@
               <li><a href="../index.html">Homepage</a></li>
               <li><a href="../index.html#news">News</a></li>
               <li><a href="people.html">People</a></li>
-              <!-- <li><a href="research.html">Research</a></li> -->
+              <li><a href="research.html">Research</a></li>
               <li><a href="publications.html">Publications</a></li>
               <li><a href="join_us.html">Join Us</a></li>
             </ul>
