Add a page on blog post, update publications.

--- a/index.html
+++ b/index.html
@@ -86,8 +86,15 @@
             <div class="content">
               <ul>
                 <li>
+                  Jan 2025: Checkout a discussion of some of the guiding principles behind our research and a summary of our work in 2024 <a href="pages/blog1.html">here</a>.
+                </li>
+                <li>
                   Nov 2024: Aviral was named one out of five Samsung AI
                   Researchers of the Year, 2024.
+                </li>
+                <li>
+                  Nov 2024: Aviral was awarded the AI2050 Early Career Fellowship 
+                  by Schmidt Sciences in 2024.
                 </li>
               </ul>
             </div>
@@ -107,7 +114,7 @@
               <li><a href="index.html">Homepage</a></li>
               <li><a href="index.html#news">News</a></li>
               <li><a href="pages/people.html">People</a></li>
-              <li><a href="pages/research.html">Research</a></li>
+              <li><a href="pages/blog1.html">Blog</a></li>
               <li><a href="pages/publications.html">Publications</a></li>
               <li><a href="pages/join_us.html">Join Us</a></li>
             </ul>
