--- a/pages/publications.html
+++ b/pages/publications.html
@@ -59,7 +59,7 @@
               <li><a href="../index.html">Homepage</a></li>
               <li><a href="../index.html#news">News</a></li>
               <li><a href="people.html">People</a></li>
-              <li><a href="research.html">Research</a></li>
+              <li><a href="blog1.html">Blog</a></li>
               <li><a href="publications.html">Publications</a></li>
               <li><a href="join_us.html">Join Us</a></li>
             </ul>
