--- a/pages/research.html
+++ b/pages/research.html
@@ -24,35 +24,7 @@
           <header id="header">
             <a href="../index.html" class="logo"
               ><strong>AIRe Lab @ CMU</strong></a
-            >
-            <!-- <ul class="icons">
-              <li>
-                <a href="#" class="icon brands fa-twitter"
-                  ><span class="label">Twitter</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands fa-facebook-f"
-                  ><span class="label">Facebook</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands fa-snapchat-ghost"
-                  ><span class="label">Snapchat</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands fa-instagram"
-                  ><span class="label">Instagram</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands fa-medium-m"
-                  ><span class="label">Medium</span></a
-                > -->
-            <!-- </li>
-            </ul> -->
-          </header>
+            ></header>
 
           <!-- Content -->
           <section>
@@ -60,9 +32,9 @@
               <h1>Research</h1>
             </header>
 
-            <span class="image main"
+            <!-- <span class="image main"
               ><img src="../images/pic11.jpg" alt=""
-            /></span>
+            /></span> -->
           </section>
         </div>
       </div>
@@ -79,7 +51,7 @@
               <li><a href="../index.html">Homepage</a></li>
               <li><a href="../index.html#news">News</a></li>
               <li><a href="people.html">People</a></li>
-              <li><a href="research.html">Research</a></li>
+              <li><a href="blog1.html">Blog</a></li>
               <li><a href="publications.html">Publications</a></li>
               <li><a href="join_us.html">Join Us</a></li>
             </ul>
