--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               </p>
             </div>
             <span class="image object">
-              <img src="images/pic10.jpg" alt="" />
+              <img src="images/lab_group_image.jpg" alt="" />
             </span>
           </section>
 
