--- a/index.html
+++ b/index.html
@@ -73,8 +73,22 @@
                 in science and engineering).
               </p>
             </div>
-            <span class="image object">
-              <img src="images/lab_group_image.jpg" alt="" />
+            <span
+              class="image object"
+              style="
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                max-width: 100%;
+                height: auto;
+                overflow: hidden;
+              "
+            >
+              <img
+                src="images/lab_group_image.jpg"
+                alt=""
+                style="width: 100%; height: auto; object-fit: contain"
+              />
             </span>
           </section>
 
@@ -86,15 +100,17 @@
             <div class="content">
               <ul>
                 <li>
-                  Jan 2025: Checkout a discussion of some of the guiding principles behind our research and a summary of our work in 2024 <a href="pages/blog1.html">here</a>.
+                  Jan 2025: Checkout a discussion of some of the guiding
+                  principles behind our research and a summary of our work in
+                  2024 <a href="pages/blog1.html">here</a>.
                 </li>
                 <li>
                   Nov 2024: Aviral was named one out of five Samsung AI
                   Researchers of the Year, 2024.
                 </li>
                 <li>
-                  Nov 2024: Aviral was awarded the AI2050 Early Career Fellowship 
-                  by Schmidt Sciences in 2024.
+                  Nov 2024: Aviral was awarded the AI2050 Early Career
+                  Fellowship by Schmidt Sciences in 2024.
                 </li>
               </ul>
             </div>
