--- a/pages/people.html
+++ b/pages/people.html
@@ -326,6 +326,11 @@
                   >Seohong Park (PhD student at UC Berkeley)
                 </a>
               </li>
+		<li>
+                <a href="https://lunjunzhang.github.io/"
+                  >Lunjun Zhang (PhD student at University of Toronto)
+                </a>
+              </li>
               <li>
                 <a href="https://biechi.github.io/"
                   >Hao Bai (MS student at UIUC)
@@ -339,6 +344,11 @@
               <li>
                 <a href="https://people.eecs.berkeley.edu/~oleh/"
                   >Oleh Rybkin (Post-doctoral scholar at UC Berkeley)
+                </a>
+              </li>
+	       <li>
+                <a href="https://zhouzypaul.github.io/"
+                  >Paul Zhou (PhD student at UC Berkeley)
                 </a>
               </li>
               <li>
