add init logo, fix typo on blog page

--- a/pages/people.html
+++ b/pages/people.html
@@ -7,6 +7,7 @@
 <html>
   <head>
     <title>CMU AIRe - People</title>
+    <link rel="icon" href="images/logo.png" type="image/x-icon" />
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -249,7 +250,7 @@
                     </p>
                   </div>
                 </div>
-              </div>              
+              </div>
             </div>
             <hr class="major" />
             <h2>Masters & Undergraduate Students</h2>
@@ -284,9 +285,7 @@
                     >
                   </h2>
                   <div class="person-details">
-                    <p>
-                      Research Interests: LLMs and Reinforcement Learning
-                    </p>
+                    <p>Research Interests: LLMs and Reinforcement Learning</p>
                   </div>
                 </div>
               </div>
@@ -326,7 +325,7 @@
                   >Seohong Park (PhD student at UC Berkeley)
                 </a>
               </li>
-		<li>
+              <li>
                 <a href="https://lunjunzhang.github.io/"
                   >Lunjun Zhang (PhD student at University of Toronto)
                 </a>
@@ -346,21 +345,19 @@
                   >Oleh Rybkin (Post-doctoral scholar at UC Berkeley)
                 </a>
               </li>
-	       <li>
+              <li>
                 <a href="https://zhouzypaul.github.io/"
                   >Paul Zhou (PhD student at UC Berkeley)
                 </a>
               </li>
               <li>
                 <a href="https://young-geng.xyz/"
-                  >Xinyang (Young) Geng (Research Scientist at Google
-                  DeepMind)
+                  >Xinyang (Young) Geng (Research Scientist at Google DeepMind)
                 </a>
               </li>
               <li>
                 <a href="https://agarwl.github.io/"
-                  >Rishabh Agarwal (Research Scientist at Google
-                  DeepMind)
+                  >Rishabh Agarwal (Research Scientist at Google DeepMind)
                 </a>
               </li>
               <li>
