--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
   <head>
     <title>CMU AIRe</title>
+    <link rel="icon" href="images/logo.png" type="image/x-icon" />
     <meta charset="utf-8" />
     <meta
       name="viewport"
