--- a/pages/blog1.html
+++ b/pages/blog1.html
@@ -8,6 +8,7 @@
 	<head> 
 		<title>Some Perspectives on Reinforcement Learning Research</title>
 		<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> -->
+		 <link rel="icon" href="images/logo.png" type="image/x-icon" />
 		<meta charset="utf-8" />
 		<meta
 		name="viewport"
@@ -43,7 +44,7 @@
 					<header id="header">
 						<a href="../index.html" class="logo"
 						><strong
-						>AiRe Lab @ CMU</strong></a>
+						>AIRe Lab @ CMU</strong></a>
 					</header>
 		
 					<!-- Content -->
