--- a/pages/publications.html
+++ b/pages/publications.html
@@ -8,6 +8,7 @@
   <head>
     <script type="text/javascript" src="../assets/js/helper.js"></script>
     <title>CMU AIRe - Publication</title>
+    <link rel="icon" href="images/logo.png" type="image/x-icon" />
     <meta charset="utf-8" />
     <meta
       name="viewport"
