--- a/pages/research.html
+++ b/pages/research.html
@@ -7,6 +7,7 @@
 <html>
   <head>
     <title>CMU AIRe - Research</title>
+    <link rel="icon" href="images/logo.png" type="image/x-icon" />
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -24,7 +25,8 @@
           <header id="header">
             <a href="../index.html" class="logo"
               ><strong>AIRe Lab @ CMU</strong></a
-            ></header>
+            >
+          </header>
 
           <!-- Content -->
           <section>
